@@ -34,6 +34,9 @@ unless ($INC{'Apache.pm'} =~ /blib/) {
     die "Wrong Apache.pm loaded: $INC{'Apache.pm'}";
 }
 
+my $version = defined $^V ? sprintf("v%vd", $^V) : $];
+Apache::add_version_component("Perl/$version");
+
 # BSD/OS 3.1 gets confused with some dynamically loaded code inside evals,
 # so make sure IO::File is loaded here, rather than later within an eval.
 # this should not harm any other platforms, since IO::File will be used
@@ -66,7 +69,7 @@ eval {
 
 $Apache::DoInternalRedirect = 1;
 $Apache::ERRSV_CAN_BE_HTTP  = 1;
-$Apache::Server::AddPerlVersion = 1;
+#$Apache::Server::AddPerlVersion = 1;
 #warn "ServerStarting=$Apache::ServerStarting\n";
 #warn "ServerReStarting=$Apache::ServerReStarting\n";
 
