@@ -10,6 +10,8 @@ all changes without author attribution are by Doug MacEachern
 
 =item 1.25_01-dev
 
+add Apache::add_version_component() function
+
 make sure Apache::ExtUtils can be found when building inside of the
 apache source tree, thanks to Jonathan Swartz for the spot
 
